
* ggplot2 now exports `alpha()` from the scales package. This means you
  don't need to do `library(scales)` or `scales::alpha()` to access that
  handy function (#1107).

* Improved documentation for `aes()` and many geoms and scales. I've tried
  to reduce the use of `...` so that you can see all the documentation in one
  place rather than having to navigate through multiple pages.

ggplot2 1.0.1
----------------------------------------------------------------

* Fixes to pass `R CMD check --run-donttest` in R-devel.

* Improvements in to order of colours and legend display of continuous colour
  scales extracted from colorbrewer palettes in `scale_*_distiller()` (@jiho, 1076)

ggplot2 1.0.0
----------------------------------------------------------------

NEW FEATURES

* New coordinate system for small scale maps. `coord_quickmap()` computes and
  sets the correct aspect ratio between one degree of latitude and one degree
  of longitude at the centre of the plotted region. It does not perform full
  fledged mapping projection as `coord_map()` does and therefore is much
  faster. Yet, it gives a correct approximation for small scale maps (a few
  degrees in either direction) at medium to low latitudes (@jiho, #922).

* `geom_boxplot` gain new `varwidth` argument for controlling whether or not
  the width of boxplots should be proportional to the size of the groups
  (@tsieger, #927).

* `position_jitterdodge()` combines `position_jitter()` and `position_dodge()`,
  allowing the user to plot and align points generated by e.g. `geom_point()`
  with those generated by a dodged `geom_boxplot()`. See
  `example(position_jitterdodge)` for a potential usage. (@kevinushey, #932)

* Allow specifying only one of the limits in a scale and use the automatic
  calculation of the other limit by passing NA to to the limit function,
  `xlim()` or `ylim()` (@jimhester, #557).

* Allow to use brewer palettes for continuous scales, through the new