@@ -224,6 +224,7 @@ export(geom_boxplot)
 export(geom_contour)
 export(geom_count)
 export(geom_crossbar)
+export(geom_curve)
 export(geom_density)
 export(geom_density2d)
 export(geom_dotplot)
